--- a/infra/base/addons/cert-manager/cert-cluster.yaml
+++ b/infra/base/addons/cert-manager/cert-cluster.yaml
@@ -7,6 +7,11 @@ metadata:
     argocd.argoproj.io/sync-wave: "3" 
 spec:
   secretName: wildcard-syncjob-tls
+  secretTemplate:
+    annotations:
+      reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+      reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "argocd,observability"
   dnsNames:
     - "*.syncjob.ru"
     - syncjob.ru
