--- a/infra/clusters/dev/kustomization.yaml
+++ b/infra/clusters/dev/kustomization.yaml
@@ -1,10 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+# All app names must be unique across the ArgoCD instance
+# So let's prefix the app names with the cluster name (dev- | demo-worker1-)
 # namePrefix: dev-
 resources:
   - ../../base/addons/sealed-secrets
   - ../../base/addons/ingress-nginx
   - ../../base/addons/cert-manager
+  - ../../base/addons/reflector
   - ../../base/addons/external-dns
   - ../../base/addons/longhorn
   - ../../base/addons/observability/loki
@@ -13,6 +16,7 @@ resources:
   - ../../base/services/llm/gateway
 
 patches:
+  # Override .spec.destination.name
   - path: destination.yaml
     target:
       kind: Application
