Fix Grafana Cert

--- a/infra/base/addons/ingress-nginx/overlays/ingress-grafana.yaml
+++ b/infra/base/addons/ingress-nginx/overlays/ingress-grafana.yaml
@@ -10,6 +10,10 @@ metadata:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   ingressClassName: nginx
+    tls:
+    - hosts:
+        - grafana.syncjob.ru
+      secretName: wildcard-syncjob-tls
   rules:
     - host: grafana.syncjob.ru
       http:
