--- a/infra/base/addons/ingress-nginx/overlays/ingress-grafana.yaml
+++ b/infra/base/addons/ingress-nginx/overlays/ingress-grafana.yaml
@@ -8,6 +8,7 @@ metadata:
     # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    external-dns.alpha.kubernetes.io/force-override: "true"
 spec:
   ingressClassName: nginx
   tls:
