--- a/infra/base/addons/ingress-nginx/overlays/ingress-chat.yaml
+++ b/infra/base/addons/ingress-nginx/overlays/ingress-chat.yaml
@@ -9,6 +9,7 @@ metadata:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     ingress.kubernetes.io/ssl-redirect: "true"
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
 spec:
   ingressClassName: nginx
   tls:
@@ -25,4 +26,4 @@ spec:
               service:
                 name: chat-api
                 port:
-                  number: 443
+                  number: 80
