--- a/infra/base/addons/ingress-nginx/overlays/ingress-grafana.yaml
+++ b/infra/base/addons/ingress-nginx/overlays/ingress-grafana.yaml
@@ -9,6 +9,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     external-dns.alpha.kubernetes.io/force-override: "true"
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
 spec:
   ingressClassName: nginx
   tls:
