--- a/infra/base/services/llm/gateway/application.yaml
+++ b/infra/base/services/llm/gateway/application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/your-repo/app-release
+    repoURL: repoURL: https://github.com/justgithubaccount/app-release
     targetRevision: HEAD
     path: infra/base/services/llm/gateway
   destination:
