--- a/infra/base/services/agent/chat/application.yaml
+++ b/infra/base/services/agent/chat/application.yaml
@@ -15,6 +15,7 @@ spec:
       values: |
         image:
           tag: latest
+          pullPolicy: Always
         secrets:
           llmApiUrl: "http://litellm.chat-api.svc.cluster.local:4000"
   destination:
