--- a/infra/base/addons/consul/application.yaml
+++ b/infra/base/addons/consul/application.yaml
@@ -15,6 +15,8 @@ spec:
       values: |
         global:
           name: consul
+        acls:
+          manageSystemACLs: true
         ui:
           enabled: true
         server:
