fix: update consul settings for acl

--- a/infra/base/addons/consul/application.yaml
+++ b/infra/base/addons/consul/application.yaml
@@ -15,12 +15,17 @@ spec:
       values: |
         global:
           name: consul
+        acl:
+          enabled: true
+          defaultPolicy: "deny"
+          enableTokenPersistence: true
         acls:
           manageSystemACLs: true
         ui:
           enabled: true
         server:
           replicas: 1
+          updatePartition: 0
         client:
           enabled: true
   destination:
