--- a/infra/base/addons/consul/application.yaml
+++ b/infra/base/addons/consul/application.yaml
@@ -15,6 +15,7 @@ spec:
       values: |
         global:
           name: consul
+          datacenter: dc1
         acl:
           enabled: true
           defaultPolicy: "deny"
