--- a/infra/base/addons/consul/application.yaml
+++ b/infra/base/addons/consul/application.yaml
@@ -16,10 +16,6 @@ spec:
         global:
           name: consul
           datacenter: dc1
-        acl:
-          enabled: true
-          defaultPolicy: "deny"
-          enableTokenPersistence: true
         acls:
           manageSystemACLs: true
         ui:
@@ -27,6 +23,14 @@ spec:
         server:
           replicas: 1
           updatePartition: 0
+          extraConfig: |
+            {
+              "acl": {
+                "enabled": true,
+                "default_policy": "deny",
+                "enable_token_persistence": true
+              }
+            }
         client:
           enabled: true
   destination:
