tst: add ssl to consul namespace

--- a/infra/base/addons/consul/application.yaml
+++ b/infra/base/addons/consul/application.yaml
@@ -1,10 +1,55 @@
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: consul
+#   namespace: argocd
+#   annotations:
+#     argocd.argoproj.io/sync-wave: "4"
+# spec:
+#   project: default
+#   source:
+#     repoURL: https://github.com/justgithubaccount/app-release
+#     path: charts/consul
+#     targetRevision: HEAD
+#     helm:
+#       values: |
+#         global:
+#           name: consul
+#           datacenter: dc1
+#         acls:
+#           manageSystemACLs: true
+#         ui:
+#           enabled: true
+#         server:
+#           replicas: 1
+#           updatePartition: 0
+#           extraConfig: |
+#             {
+#               "acl": {
+#                 "enabled": true,
+#                 "default_policy": "deny",
+#                 "enable_token_persistence": true
+#               }
+#             }
+#         client:
+#           enabled: true
+#   destination:
+#     name: CLUSTER
+#     namespace: consul
+#   syncPolicy:
+#     automated:
+#       selfHeal: true
+#       prune: true
+#     syncOptions:
+#       - CreateNamespace=true
+
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: consul
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "1"
+    argocd.argoproj.io/sync-wave: "4"
 spec:
   project: default
   source:
@@ -16,12 +61,20 @@ spec:
         global:
           name: consul
           datacenter: dc1
+          tls:
+            enabled: true
+            enableAutoEncrypt: true
+
         acls:
           manageSystemACLs: true
+
         ui:
           enabled: true
+          service:
+            type: ClusterIP
+
         server:
-          replicas: 1
+          replicas: 3
           updatePartition: 0
           extraConfig: |
             {
@@ -31,8 +84,22 @@ spec:
                 "enable_token_persistence": true
               }
             }
+
         client:
           enabled: true
+
+        ingressGateways:
+          enabled: true
+          defaults:
+            tls:
+              enabled: true
+              secretName: wildcard-syncjob-tls
+
+        connectInject:
+          enabled: true
+          tls:
+            enabled: true
+
   destination:
     name: CLUSTER
     namespace: consul
