--- a/infra/base/addons/ingress-nginx/kustomization.yaml
+++ b/infra/base/addons/ingress-nginx/kustomization.yaml
@@ -3,3 +3,4 @@ resources:
   - overlays/ingress-chat.yaml
   - overlays/ingress-grafana.yaml
   - overlays/ingress-argo.yaml
+  - overlays/ingress-consul.yaml
