tst: add internal certs to consul

--- a/infra/base/addons/consul/application.yaml
+++ b/infra/base/addons/consul/application.yaml
@@ -64,6 +64,8 @@ spec:
           tls:
             enabled: true
             enableAutoEncrypt: true
+            internalCerts:
+              enabled: true
 
         acls:
           manageSystemACLs: true
