fix: add helm release names

--- a/infra/base/addons/consul/mesh/application.yaml
+++ b/infra/base/addons/consul/mesh/application.yaml
@@ -15,6 +15,7 @@ spec:
     path: charts/consul
     targetRevision: HEAD
     helm:
+      releaseName: consul-mesh
       values: |
         global:
           name: consul
