--- a/infra/base/addons/consul/server/application.yaml
+++ b/infra/base/addons/consul/server/application.yaml
@@ -15,6 +15,7 @@ spec:
     path: charts/consul
     targetRevision: HEAD
     helm:
+      releaseName: consul-server
       values: |
         global:
           name: consul
