fix: try to fix inject

--- a/infra/base/addons/consul/mesh/application.yaml
+++ b/infra/base/addons/consul/mesh/application.yaml
@@ -32,7 +32,7 @@ spec:
             
         connectInject:
           enabled: false  
-          default: false  # Opt-in for production
+          # default: false  # Opt-in for production
           tls:
             enabled: true
           transparentProxy:
