fix: add argocd values for consul server

--- a/infra/base/addons/consul/server/application.yaml
+++ b/infra/base/addons/consul/server/application.yaml
@@ -17,6 +17,8 @@ spec:
     helm:
       releaseName: consul-server
       values: |
+        argocd:
+          enabled: true
         global:
           name: consul
           datacenter: dc1
