fix: change sync policy for consul server

--- a/infra/base/addons/consul/server/application.yaml
+++ b/infra/base/addons/consul/server/application.yaml
@@ -67,5 +67,6 @@ spec:
       selfHeal: true
       prune: true
     syncOptions:
+      - Validate=true
       - CreateNamespace=true
-      - RespectIgnoreDifferences=true
+      - PruneLast=true
