misc: turn off consul in dev cluster

--- a/infra/clusters/dev/kustomization.yaml
+++ b/infra/clusters/dev/kustomization.yaml
@@ -14,7 +14,7 @@ resources:
   - ../../base/addons/observability/grafana
   - ../../base/services/agent/chat
   - ../../base/services/llm/gateway
-  - ../../base/addons/consul
+#  - ../../base/addons/consul
   - ../../base/addons/external-secrets
 
 patches:
