obs: add vector-gateway as stateless-aggregator

--- a/infra/clusters/dev/kustomization.yaml
+++ b/infra/clusters/dev/kustomization.yaml
@@ -16,6 +16,7 @@ resources:
   - ../../base/services/llm/gateway
 #  - ../../base/addons/consul
   - ../../base/addons/external-secrets
+  - ../../base/addons/observability/vector-gateway
 
 patches:
   # Override .spec.destination.name
