--- a/infra/base/addons/observability/vector-gateway/application.yaml
+++ b/infra/base/addons/observability/vector-gateway/application.yaml
@@ -21,7 +21,7 @@ spec:
               port: 4318
             - name: otlp-grpc
               port: 4317
-        config:
+        customConfig:
           data_dir: /vector-data
           sources:
             otel:
