fix: setup config for vector-gateway

--- a/infra/base/addons/observability/vector-gateway/application.yaml
+++ b/infra/base/addons/observability/vector-gateway/application.yaml
@@ -35,7 +35,7 @@ spec:
               encoding:
                 codec: json
               labels:
-                app: "{{ host }}"
+                app: "{{`{{ host }}`}}"
                 env: "dev"
   destination:
     name: CLUSTER
