--- a/infra/base/services/agent/chat/application.yaml
+++ b/infra/base/services/agent/chat/application.yaml
@@ -12,15 +12,16 @@ spec:
     targetRevision: main
     path: charts/chat
     helm:
+      valueFiles:
+        - values.yaml  # Дефолтные values из чарта
       values: |
         image:
           tag: latest
-          pullPolicy: Always
-        secrets:
-          llmApiUrl: "http://litellm.chat-api.svc.cluster.local:4000"
+        env:
+          OTEL_SERVICE_NAME: "chat-api"
+          OTEL_EXPORTER_OTLP_ENDPOINT: "http://vector-gateway.observability.svc.cluster.local:4318"
   destination:
-    name: CLUSTER
-    # server: https://kubernetes.default.svc
+    name: CLUSTER  # Будет заменено Kustomize
     namespace: chat-api
   syncPolicy:
     automated:
