fix: remove env in chat services

--- a/charts/chat/templates/secret.yaml
+++ b/charts/chat/templates/secret.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ .Values.namespace | default "chat-api" }}
 type: Opaque
 stringData:
-  OPENAI_API_KEY: {{ .Values.secrets.openaiApiKey | quote }}
+  # OPENAI_API_KEY: ""{{ .Values.secrets.openaiApiKey | quote }}""
   LLM_API_URL: {{ .Values.secrets.llmApiUrl | quote }}
   CHAT_MODEL: {{ .Values.secrets.chatModel | quote }}
   PROJECT_NAME: {{ .Values.secrets.projectName | quote }}
