mng: update helm release for chat for openrouter

--- a/charts/chat/templates/secret.yaml
+++ b/charts/chat/templates/secret.yaml
@@ -1,10 +1,14 @@
+# charts/chat/templates/secret.yaml
+{{- if .Values.createInternalSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "chat-api.fullname" . }}-secrets
+  name: {{ include "chat-api.fullname" . }}-config
   namespace: {{ .Values.namespace | default "chat-api" }}
 type: Opaque
 stringData:
-  LLM_API_URL: {{ .Values.secrets.llmApiUrl | quote }}
-  CHAT_MODEL: {{ .Values.secrets.chatModel | quote }}
-  PROJECT_NAME: {{ .Values.secrets.projectName | quote }}
+  # OpenRouter Configuration
+  OPENROUTER_API_URL: {{ .Values.openrouter.apiUrl | quote }}
+  OPENROUTER_MODEL: {{ .Values.openrouter.defaultModel | quote }}
+  {{- if .Values.openrouter.httpReferer }}
+{{- end }}
