feat(openrouter): update llm gateway for chat

--- a/charts/chat/templates/secret.yaml
+++ b/charts/chat/templates/secret.yaml
@@ -11,4 +11,9 @@ stringData:
   OPENROUTER_API_URL: {{ .Values.openrouter.apiUrl | quote }}
   OPENROUTER_MODEL: {{ .Values.openrouter.defaultModel | quote }}
   {{- if .Values.openrouter.httpReferer }}
+  OPENROUTER_HTTP_REFERER: {{ .Values.openrouter.httpReferer | quote }}
+  {{- end }}
+  {{- if .Values.openrouter.xTitle }}
+  OPENROUTER_X_TITLE: {{ .Values.openrouter.xTitle | quote }}
+  {{- end }}
 {{- end }}
