remove litellm in dev cluster

--- a/infra/clusters/dev/kustomization.yaml
+++ b/infra/clusters/dev/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   - ../../base/addons/observability/loki
   - ../../base/addons/observability/grafana
   - ../../base/services/agent/chat
-  - ../../base/services/llm/gateway
+#  - ../../base/services/llm/gateway
 #  - ../../base/addons/consul
   - ../../base/addons/external-secrets
   - ../../base/addons/observability/vector-gateway
