mng(chat): update templates for helm

--- a/charts/chat/values.yaml
+++ b/charts/chat/values.yaml
@@ -73,3 +73,19 @@ externalServices:
 # Имя внешнего секрета с OPENROUTER_API_KEY
 secretsRefName: "chat-api-secrets"
 dbSecretRefName: ""
+
+# PostgreSQL
+postgres:
+  externalService:
+    enabled: false
+
+# Ingress
+ingress:
+  enabled: false
+  className: nginx
+  host: ""
+  path: /
+  tls: false
+  
+# Другие возможные секции
+createInternalSecret: false
