--- a/charts/chat/templates/deployment.yaml
+++ b/charts/chat/templates/deployment.yaml
@@ -43,6 +43,10 @@ spec:
               value: {{ .Chart.AppVersion | quote }}
             - name: LOG_LEVEL
               value: {{ .Values.env.LOG_LEVEL | default "INFO" | quote }}
+            - name: OPENROUTER_API_URL
+              value: {{ .Values.openrouter.apiUrl | quote }}
+            - name: OPENROUTER_MODEL  
+              value: {{ .Values.openrouter.defaultModel | quote }}
             
             # Kubernetes metadata
             - name: K8S_NODE_NAME
