--- a/charts/chat/templates/deployment.yaml
+++ b/charts/chat/templates/deployment.yaml
@@ -14,6 +14,9 @@ spec:
     metadata:
       labels:
         {{- include "chat-api.selectorLabels" . | nindent 8 }}
+          metadata:
+      annotations:
+        openrouter.model: {{ .Values.openrouter.defaultModel | quote }}
     spec:
       serviceAccountName: {{ include "chat-api.fullname" . }}
       containers:
