tst(ci): trigger validation

--- a/.github/workflows/validate-helm-and-kustomize.yaml
+++ b/.github/workflows/validate-helm-and-kustomize.yaml
@@ -33,8 +33,8 @@ jobs:
             --values infra/clusters/${{ matrix.env }}/chat-values.yaml \
             --namespace chat-${{ matrix.env }} > rendered.yaml
 
-      - name: Dry-run Kubernetes apply
-        run: kubectl apply --dry-run=client --validate=false -f rendered.yaml
+      # - name: Dry-run Kubernetes apply
+      #  run: kubectl apply --dry-run=client --validate=false -f rendered.yaml
 
       - name: Kubeconform schema validation
         run: kubeconform -summary -strict rendered.yaml
