fix(ns): change namespace for chat

--- a/infra/clusters/dev/chat-values.yaml
+++ b/infra/clusters/dev/chat-values.yaml
@@ -25,4 +25,6 @@ resources:
     memory: "256Mi"
     cpu: "200m"
 
-namespace: "chat-dev"
+# [?] Автомизировать вальюсы относитильно того что если он оверлейтся на уровне разрешений (clusters) для роли (roles)
+# как-то добится чтобы он еще и создавался автоматам и не конфиликтовал, скорее всего есть очевидное решение
+namespace: "chat-api"
