--- a/.github/workflows/test-python-app-chat.yaml
+++ b/.github/workflows/test-python-app-chat.yaml
@@ -22,7 +22,9 @@ jobs:
           pip install -r requirements.txt
           pip install pytest pytest-asyncio pytest-cov mypy ruff
       - name: Run tests
-        run: pytest --cov=app tests/
+        run: |
+          export PYTHONPATH=.
+          pytest --cov=app tests/
       - name: Type check
         run: mypy app --ignore-missing-imports
       - name: Lint
