--- a/.github/workflows/test-python-app-chat.yaml
+++ b/.github/workflows/test-python-app-chat.yaml
@@ -1,7 +1,7 @@
 name: Python Tests
 on:
-  push:
-    paths: ['apps/chat/**']
+  # push:
+  #   paths: ['apps/chat/**']
   pull_request:
     paths: ['apps/chat/**']
 jobs:
