--- a/.github/workflows/.releaserc.json
+++ b/.github/workflows/.releaserc.json
@@ -1,19 +1,12 @@
 {
-  "branches": [
-    {
-      "name": "main",
-      "prerelease": "alpha"
-    }
-  ],
+  "branches": ["main"],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     [
       "@semantic-release/github",
       {
-        "assets": [
-          "chat-*.tgz"
-        ]
+        "assets": ["chat-*.tgz"]
       }
     ]
   ]
