--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,6 +6,7 @@ on:
     paths:
       - 'apps/chat/**'
       - '.github/workflows/release.yaml'
+      - '.releaserc.json'
 
 jobs:
   build-and-release:
