--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,8 +1,46 @@
 {
   "branches": ["main"],
   "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "releaseRules": [
+          {"type": "feat", "release": "minor"},
+          {"type": "fix", "release": "patch"},
+          {"type": "perf", "release": "patch"},
+          {"type": "revert", "release": "patch"},
+          {"type": "docs", "release": "patch"},
+          {"type": "style", "release": "patch"},
+          {"type": "refactor", "release": "patch"},
+          {"type": "test", "release": "patch"},
+          {"type": "tst", "release": "patch"},
+          {"type": "ci", "release": "patch"},
+          {"type": "chore", "release": "patch"},
+          {"breaking": true, "release": "major"}
+        ]
+      }
+    ],
+    [
+      "@semantic-release/release-notes-generator",
+      {
+        "preset": "conventionalcommits",
+        "presetConfig": {
+          "types": [
+            {"type": "feat", "section": "Features"},
+            {"type": "fix", "section": "Bug Fixes"},
+            {"type": "perf", "section": "Performance Improvements"},
+            {"type": "revert", "section": "Reverts"},
+            {"type": "docs", "section": "Documentation"},
+            {"type": "style", "section": "Styles"},
+            {"type": "refactor", "section": "Code Refactoring"},
+            {"type": "test", "section": "Tests"},
+            {"type": "tst", "section": "Tests"},
+            {"type": "ci", "section": "Continuous Integration"},
+            {"type": "chore", "section": "Chores"}
+          ]
+        }
+      }
+    ],
     [
       "@semantic-release/github",
       {
