--- a/infra/base/services/agent/chat/application.yaml
+++ b/infra/base/services/agent/chat/application.yaml
@@ -5,6 +5,12 @@ metadata:
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "5"
+    argocd-image-updater.argoproj.io/image-list: chat=ghcr.io/justgithubaccount/chat-api
+    argocd-image-updater.argoproj.io/chat.update-strategy: semver:~1.0
+    # ~1.1 = только 1.1.x (patch updates)
+    # ^1.1 = любые 1.x.x (minor updates)  
+    # latest = всегда последний тег
+    argocd-image-updater.argoproj.io/chat.helm.image-tag: image.tag
 spec:
   project: default
   source:
