tst(ci): update helm chart release for chat

--- a/charts/chat/values.yaml
+++ b/charts/chat/values.yaml
@@ -8,7 +8,7 @@ namespace: "chat-api"
 image:
   repository: ghcr.io/justgithubaccount/chat-api
   pullPolicy: Always
-  tag: "latest"
+  tag: "1.0.0"
 
 # === Сетевые настройки ===
 containerPort: 8000
