--- a/charts/chat/templates/deployment.yaml
+++ b/charts/chat/templates/deployment.yaml
@@ -20,7 +20,8 @@ spec:
       serviceAccountName: {{ include "chat-api.fullname" . }}
       containers:
         - name: chat-api
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          # image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.containerPort }}
@@ -42,7 +43,8 @@ spec:
             - name: ENVIRONMENT
               value: {{ .Values.env.ENVIRONMENT | default "production" | quote }}
             - name: APP_VERSION
-              value: {{ .Chart.AppVersion | quote }}
+              value: {{ .Values.image.tag | quote }}
+              # value: {{ .Chart.AppVersion | quote }}
             - name: LOG_LEVEL
               value: {{ .Values.env.LOG_LEVEL | default "INFO" | quote }}
             - name: OPENROUTER_API_URL
